# tibs

./: CONTRIBUTING.md  Cargo.toml  README.md  build.sh  pyproject.toml  release_notes.md
.github/workflows/: build.yml  publish.yml  setup.yml  test.yml
doc/: conf.py  index.rst
rust/src/: bits.rs  bits_tests.rs  core.rs  helpers.rs  iterator.rs  lib.rs  mutable.rs  mutable_test.rs
src/: bits.rs  bits_tests.rs  core.rs  helpers.rs  iterator.rs  lib.rs  mod.rs  mutable.rs  mutable_test.rs  mutibs.rs  tibs_.rs
tests/: test_array.py  test_benchmarks.py  test_bitarray.py  test_bits.py  test_bitstream.py  test_common.py  test_coverage.py  test_dtypes.py  test_field.py  test_format.py  test_fuzzing.py  test_general.py  test_if.py  test_mutable_bits.py  test_pass.py  test_reader.py  test_repeat.py  test_tibs.py
tibs/: __init__.py  _array.py  _bits.py  _common.py  _dtype_definitions.py  _dtypes.py  _field.py  _fieldtype.py
