[package]
name = "tibs"
version = "0.0.5"
edition = "2021"

[lib]
name = "tibs"
crate-type = ["cdylib"]

[dependencies]
hex = "~0.4"
pyo3 = "~0.26"
bitvec = "~1.0"
hamming = "~0.1"
bytemuck = "~1.23"
lru = "~0.16"
once_cell = "~1.21"
rand = "0.9.2"
sha2 = "0.10.8"

[profile.release]
lto = "fat"
codegen-units = 1